	  when the value of def is copied into it via strcpy().
	  (bort@alltel.net, Christian Weisgarber, David Benbennick, and
	  DLR)
	- Remove the last editbot references, to avoid any potential
	  segfaults related to them.  Also remove fix_editbot(), as it's
	  no longer needed. (David Benbennick)
	- Rename several variables to make their use clearer and to
	  avoid conflicts. (DLR)
- files.c:
  do_insertfile()
	- Wrap one reference to NANO_EXTCMD_KEY in a NANO_SMALL #ifdef.
	  (DLR)
	- Save the already-typed answer when switching from "Insert
	  File" to "Execute Command" mode via Ctrl-X, just in case we
	  started typing a command before switching. (DLR)
  add_open_files()
	- Make the saving of marked status in open_files->file_flags
	  work properly again; a tweak to the ISSET() macro in 1.3.0
	  to make it only return 0 or 1 broke it. (DLR)
  write_marked()
	- New function used to write the current marked selection to a
	  file, split out from do_writeout(). (DLR)
  do_writeout()
	- Tweak for efficiency. (David Benbennick)  DLR: Modify to have
	  the current answer preserved between toggles again.
  filestat()
	- Removed, as it is only called in one place and is
	  redundant. (DLR)
  do_browser()
	- Replace the filestat() call with an equivalent stat() call.
	  (DLR)
- global.c:
  shortcut_init()
	- Only allow verbatim input when we're not in view mode. (DLR)
	- Set the associated function for unjustify to 0 instead of
	  do_uncut_text(), since it's currently unused. (DLR)
- nano.c:
  usage()
	- Clarify the description for -T/--tabsize a bit. (DLR)
  do_verbatim_input()
	- Remove the now-unneeded code to disable XON, XOFF, and
	  suspend, since we now go into raw mode in
	  get_verbatim_kbinput() and bypass them. (DLR)
  do_next_word()
	- Simplify and remove references to editbot so as to avoid a
	  segfault. (David Benbennick)
  do_prev_word()
	- Simplify and remove references to edittop. (David Benbennick)
  do_int_speller(), do_alt_speller(), do_spell()